--- a/package.json
+++ b/package.json
@@ -14,10 +14,19 @@
   },
   "dependencies": {
     "gatsby": "^2.7.3",
+    "gatsby-plugin-sass": "^2.0.7",
+    "gatsby-remark-images": "^3.0.1",
+    "gatsby-remark-relative-images": "^0.2.1",
+    "gatsby-source-filesystem": "^2.0.26",
+    "lodash": "^4.17.5",
+    "lodash-webpack-plugin": "^0.11.4",
+    "node-sass": "^4.11.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
   "devDependencies": {
+    "mini-css-extract-plugin": "^0.6.0",
+    "node-sass-glob-importer": "^5.2.0",
     "prettier": "^1.17.1"
   },
   "repository": {
